Fixed news title rendering on Firefox

--- a/src/components/titleText.module.css
+++ b/src/components/titleText.module.css
@@ -18,4 +18,5 @@
     display: inline;
     outline: 5px solid #fff;
     background: #fff;
+    box-decoration-break: clone;
 }
